feat: update UserDetailsImpl.java class