@@ -2,10 +2,12 @@ package com.example.managepro.model;
 
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Getter
@@ -24,10 +26,11 @@ public class UserDetailsImpl implements UserDetails {
         this.authorities = authorities;
     }
 
-    public static UserDetailsImpl build (User user) {
+    public static UserDetailsImpl build(User user) {
         List<GrantedAuthority> grantedAuthorityList = user.getRoles().stream()
-                .map(role -> (GrantedAuthority) role::getName)
-                .toList();
+                .map(role -> new SimpleGrantedAuthority(role.getName().name()))
+                .collect(Collectors.toList());
+
         return new UserDetailsImpl(
                 user.getId(),
                 user.getUserName(),
